objects/Technology_Market_place_Application__c.object
<CustomObject>
    <fields>
        <fullName>Application_Sales_Type__c</fullName>
        <label>Application Sales Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Core Integration / participant invoiced (15%)</fullName>
                </value>
                <value>
                    <fullName>Core Integration incl. Runtime Connector License (25%)</fullName>
                </value>
                <value>
                    <fullName>Extension (25%)</fullName>
                </value>
                <value>
                    <fullName>Hardware (5%)</fullName>
                </value>
                <value>
                    <fullName>Accessory / Genesys invoiced (30%)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_any_deals_pending_execution__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are any deals pending execution of a Genesys Partner Agreement?</inlineHelpText>
        <label>Are any deals pending execution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Average_deal_size__c</fullName>
        <inlineHelpText>Please describe your expected average deal size in US Dollar</inlineHelpText>
        <label>Average expected deal size Post discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Describe_planned_end_user_pricing__c</fullName>
        <inlineHelpText>a. Average Selling Price ($USD Post Discount) per user (not total deal value)
b. Provide examples for both subscription and perpetual licensing if applicable.</inlineHelpText>
        <label>Describe planned end user pricing</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_the_point_of_Integration__c</fullName>
        <inlineHelpText>which SDKs are required / which Genesys components are required? / Do you support current Genesys 8 applications such as ORS and IWS?)</inlineHelpText>
        <label>Describe the point of Integration</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Elevator_Pitch__c</fullName>
        <inlineHelpText>Please provide 5 line description about your solution, not your company. What is the quickest description of your solution? Why shall a prospect buy this solution?</inlineHelpText>
        <label>Elevator Pitch</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>For_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>For User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Technology_Market_place_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HasNotApprovedByPM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Not Approved by PM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasNotApprovedby_Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Not Approved by Marketing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasNotApprovedby_PS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Not Approved by PS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasNotApprovedby_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Not Approved by Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasNotApprovedby_TECH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Not Approved by Technology</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Howmany_custmers_are_currently_piloting__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>How many customers/prospects are currently piloting this product?</inlineHelpText>
        <label>Howmany custmers are currently piloting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>If_not_what_is_the_expected_GA_Date__c</fullName>
        <inlineHelpText>Please provide an expected release date for your application</inlineHelpText>
        <label>If not, what is the expected GA Date?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_App_already_built_available_in_Prod__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is App already built &amp; available in Prod</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_your_sol_aimed_at_a_part_verticals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is your sol aimed at a part verticals?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Licensing_examples__c</fullName>
        <inlineHelpText>Provide examples for both subscription and perpetual licensing if applicable</inlineHelpText>
        <label>Licensing examples</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>List_of_your_Top_prospects_deal_value__c</fullName>
        <inlineHelpText>List of your Top prospects and deal value</inlineHelpText>
        <label>List of your Top prospects &amp; deal value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Technology_Market_Place_Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Technology_Market_place_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Please_Describe__c</fullName>
        <label>Please Describe</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_e_mail__c</fullName>
        <label>Primary Contact e-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primary_contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Technology Market Place Applications</relationshipLabel>
        <relationshipName>Technology_Market_place_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Problem_Statement__c</fullName>
        <inlineHelpText>Please describe a typical issue of a user your solution solves. What is their pain point?</inlineHelpText>
        <label>Problem Statement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solution_Name__c</fullName>
        <label>Solution Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supported_Genesys_Platform__c</fullName>
        <label>Supported Genesys Platform</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PureEngage</fullName>
                </value>
                <value>
                    <fullName>PureConnect</fullName>
                </value>
                <value>
                    <fullName>PureCloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supported_Offering__c</fullName>
        <label>Supported Offering</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PureCloud</fullName>
                </value>
                <value>
                    <fullName>PureEngage Cloud</fullName>
                </value>
                <value>
                    <fullName>PureEngage Premise</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud</fullName>
                </value>
                <value>
                    <fullName>PureConnect Premise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supported_Platform__c</fullName>
        <label>Supported Platform</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PureCloud</fullName>
                </value>
                <value>
                    <fullName>PureEngage Cloud</fullName>
                </value>
                <value>
                    <fullName>PureEngage Premise</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud</fullName>
                </value>
                <value>
                    <fullName>PureConnect Premise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Application__c</fullName>
        <label>Type of Application</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Core integration</fullName>
                </value>
                <value>
                    <fullName>Extension</fullName>
                </value>
                <value>
                    <fullName>Embedded</fullName>
                </value>
                <value>
                    <fullName>Accessory</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_currency_does_your_company_transact__c</fullName>
        <inlineHelpText>What currency does your company transact in?</inlineHelpText>
        <label>What currency does your company transact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_s_your_target_customer_company_size__c</fullName>
        <inlineHelpText>What is your target customer company size (smb, mid-market, enterprise)</inlineHelpText>
        <label>What&apos;s your target customer company size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Smb</fullName>
                </value>
                <value>
                    <fullName>Mid-market</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>average_sales_cycle_to_close_a_deal__c</fullName>
        <inlineHelpText>Please be a bit more specific than “1 week to 12 month</inlineHelpText>
        <label>Average sales cycle to close a deal?`</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Month</fullName>
                </value>
                <value>
                    <fullName>2 Months</fullName>
                </value>
                <value>
                    <fullName>3 Months</fullName>
                </value>
                <value>
                    <fullName>4 Months</fullName>
                </value>
                <value>
                    <fullName>5 Months</fullName>
                </value>
                <value>
                    <fullName>6 Months</fullName>
                </value>
                <value>
                    <fullName>7 Months</fullName>
                </value>
                <value>
                    <fullName>8 Months</fullName>
                </value>
                <value>
                    <fullName>9 Months</fullName>
                </value>
                <value>
                    <fullName>10 Months</fullName>
                </value>
                <value>
                    <fullName>11 Months</fullName>
                </value>
                <value>
                    <fullName>12 Months</fullName>
                </value>
                <value>
                    <fullName>13 Months</fullName>
                </value>
                <value>
                    <fullName>14 Months</fullName>
                </value>
                <value>
                    <fullName>15 Months</fullName>
                </value>
                <value>
                    <fullName>16 Months</fullName>
                </value>
                <value>
                    <fullName>17 Months</fullName>
                </value>
                <value>
                    <fullName>18 Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>AppFoundry Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Partner_Account__c</columns>
        <columns>Company_Name__c</columns>
        <columns>Date_Completed__c</columns>
        <columns>Solution_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Are_any_deals_pending_execution__c</columns>
        <columns>average_sales_cycle_to_close_a_deal__c</columns>
        <columns>Average_deal_size__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AppFoundry_Queue_Technology_Market_place_Application</fullName>
        <filterScope>Queue</filterScope>
        <label>AppFoundry Queue</label>
        <queue>AppFoundry_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>TMA-{00000}</displayFormat>
        <label>Technology Market place Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AppFoundry Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>